examples/test/testpolicy220.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy220
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key19: value31
      key26: value37
      key43: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value44
      podSelector:
        matchLabels:
          key6: value32
          key44: value34
          key35: value10
